--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     testCompile "org.grails.plugins:geb"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+    compile 'com.enigmabridge:hibernate4-sqlite-dialect:0.1.2'
+    runtime 'org.xerial:sqlite-jdbc:3.14.2.1'
+    compile 'org.grails:grails-datastore-rest-client:5.0.0.RC2'
 }
 
 assets {
