--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
     compile 'com.enigmabridge:hibernate4-sqlite-dialect:0.1.2'
     runtime 'org.xerial:sqlite-jdbc:3.14.2.1'
+    runtime 'mysql:mysql-connector-java:5.1.37'
     compile 'org.grails:grails-datastore-rest-client:5.0.0.RC2'
 }
 
