--- a/build.gradle
+++ b/build.gradle
@@ -40,12 +40,15 @@ dependencyManagement {
     applyMavenExclusions false
 }
 
+bootRepackage.enabled = false
+
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
     compile "org.grails:grails-core"
     compile "org.springframework.boot:spring-boot-starter-actuator"
-    compile "org.springframework.boot:spring-boot-starter-tomcat"
+    //compile "org.springframework.boot:spring-boot-starter-tomcat"
+    provided "org.springframework.boot:spring-boot-starter-tomcat"
     compile "org.grails:grails-dependencies"
     compile "org.grails:grails-web-boot"
     compile "org.grails.plugins:cache"
@@ -69,11 +72,4 @@ dependencies {
 assets {
     minifyJs = true
     minifyCss = true
-}
-
-war {
-    from('C:\\Users\\jbamb\\OneDrive\\Škola\\magistr\\3.semestr\\VIA\\semester_project\\grails-app\\database') {
-        include 'test.db'
-        into 'WEB-INF'
-    }
 }
