--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     runtime 'org.xerial:sqlite-jdbc:3.14.2.1'
     runtime 'mysql:mysql-connector-java:5.1.37'
     compile 'org.grails:grails-datastore-rest-client:5.0.0.RC2'
+    compile 'org.grails.plugins:spring-security-core:3.1.1'
 }
 
 assets {
